<resources>
    <string name="app_name">Well Cooked</string>
    <string name="home">Home</string>
    <string name="nav_drawer_header_title">Menus</string>
    <string name="nav_drawer_customer_item">Customer Panel</string>
    <string name="nav_drawer_courier_item">Courier Panel</string>
    <string name="nav_drawer_subheader_title">Other</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="cool">Cool</string>
    <string name="app_desc_brief">Ingredients ordering app</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_orders">New Orders</string>
    <string name="assigned_orders">Orders</string>
    <string name="customer_orders">Orders</string>
    <string name="recipe_browser">Recipes</string>
    <string name="recipe_description">recipe_description</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="unknown_variable">Unknown</string>
    <string name="take_order">Take</string>
    <string name="show_recipe_button_desc">recipe</string>
    <string name="order_recipe_content_desc">order</string>
    <string name="order_states_hint">Status</string>
    <string name="recipe">Recipe</string>
    <string name="order">Order</string>
    <string name="logout">Logout</string>
</resources>