<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainItem"
        android:title="@string/nav_drawer_header_title">
        <menu>
            <item
                android:id="@+id/customerFragment"
                android:icon="@drawable/outline_shopping_cart_24"
                android:title="@string/nav_drawer_customer_item"
                android:enabled="true"
                android:checkable="true"/>
            <item
                android:id="@+id/courierFragment"
                android:icon="@drawable/outline_local_shipping_24"
                android:title="@string/nav_drawer_courier_item"
                android:enabled="true"
                android:checkable="true"/>
        </menu>
    </item>
    <item
        android:id="@+id/modeItem"
        android:title="@string/nav_drawer_subheader_title">
        <menu>
            <item
                android:id="@+id/settingsFragment"
                android:icon="@android:drawable/ic_menu_edit"
                android:title="@string/settings"
                android:enabled="true"
                android:checkable="true"/>
            <item
                android:id="@+id/aboutFragment"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/about"
                android:enabled="true"
                android:checkable="true"/>
            <item
                android:id="@+id/logoutFragment"
                android:icon="@drawable/outline_logout_24"
                android:title="@string/logout"
                android:enabled="true"
                android:checkable="true"/>
        </menu>
    </item>
</menu>