<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabShowRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/show_recipe_button_desc"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:text="@string/recipe"
        app:icon="@drawable/outline_menu_book_24"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/orderRecipeImage"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:contentDescription="@string/recipe_description"
                android:maxHeight="128dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginVertical="4dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/orderRecipeImage">

                <TextView
                    android:id="@+id/orderTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

                <TextView
                    android:id="@+id/orderInfoCustomer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:text="@string/lorem_ipsum"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                <TextView
                    android:id="@+id/orderDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:text="@string/lorem_ipsum"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                <TextView
                    android:id="@+id/orderStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/lorem_ipsum"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>


